# gifpgn

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_flake8.yml  run_ruff.yml  run_tests.yml
docs/: conf.py  gifpgn.rst  requirements.txt
docs/source/: components.rst  conf.py  exceptions.rst  geometry.rst  gifpgn.rst  index.rst  modules.rst  utils.rst
gifpgn/: __init__.py  _t.py  _types.py  components.py  exceptions.py  geometry.py  gifpgn.py  utils.py
test/: test.pgn  test_gifpgn.py
tests/test_data/: test_clock.pgn  test_eval_annotations.pgn  test_no_annotations.pgn  test_no_moves.pgn
tests/unit/: test_components.py  test_geometry.py  test_gifpgn.py  test_utils.py
